--- a/styles.css
+++ b/styles.css
@@ -12,6 +12,11 @@ body {
     background-color: black;
     color: #00AD64;
 }
+h1 {
+    font-weight: bold;
+    text-align: center;
+    text-decoration: underline;
+}
 
 /* Styling anchor tags inside the body */
 body a {
