--- a/styles.css
+++ b/styles.css
@@ -8,7 +8,7 @@ body {
     box-sizing: border-box;
     display: flex;
     flex-direction: column;
-    min-height: 100vh;
+    height: 100%;
     background-color: black;
     color: #00AD64;
 }
