--- a/styles.css
+++ b/styles.css
@@ -8,10 +8,8 @@ body {
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
-    box-sizing: border-box;
     display: flex;
     flex-direction: column;
-    height: 100%;
     background-color: black;
     color: #00AD64;
 }
@@ -97,7 +95,7 @@ main {
 
 /* Footer styling */
 footer {
-    position: fixed;
+    padding: 1rem 0;
     text-align: center;
     bottom: 0;
     background-color: #00AD64;
