--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,15 @@
 /* General Styles */
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
 body, html {
     height: 100%; /* Set full height for the body and html */
+    display: flex;
+    flex-direction: column;
+
 }
 
 /* Setting default styles for the body, including font, margins, padding, and flexbox properties */
@@ -8,8 +17,6 @@ body {
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
-    display: flex;
-    flex-direction: column;
     background-color: black;
     color: #00AD64;
 }
@@ -81,8 +88,9 @@ button:hover {
 /* Ensuring the container takes up available space */
 
 .container {
-    display: flex;
-    flex-wrap: wrap; /* Allows items to wrap on smaller screens */
+    /*flex-wrap: wrap; !* Allows items to wrap on smaller screens *!*/
+    max-width: 1200px;
+    width: 90%;
     justify-content: center;
     align-items: center;
     flex: 1;
